# tidycode

./: .gitignore  .pre-commit-config.yaml  README.en.md  pyproject.toml
.github/workflows/: publish.yml
src/tidycode/: settings.py
src/tidycode/changelog/: __init__.py  manager.py  types.py
src/tidycode/cli/: main.py
src/tidycode/cli/commands/: clean.py  commitizen.py  configs.py  dependabot.py  hooks.py  pyproject.py  quality.py  setup.py
src/tidycode/core/: quality_tools.py  utils.py
src/tidycode/core/bootstrap/: __init__.py  setup_commitizen.py  setup_dependabot.py  setup_hooks.py  setup_tools.py
src/tidycode/core/pre_commit/: __init__.py  helpers.py  manager.py
src/tidycode/core/pyproject/: __init__.py  default_tools.py  types.py
src/tidycode/core/toml/: __init__.py  loader.py  manager.py  merger.py
src/tidycode/core/yaml/: __init__.py  loader.py  manager.py  utils.py
src/tidycode/modules/clean/: clean_task.py  old_clean_task.py
src/tidycode/modules/quality/: __init__.py  black_runner.py  isort_runner.py  mypy_runner.py  orchestrator.py  ruff_runner.py
src/tidycode/plugins/: __init__.py  base.py  loader.py  registry.py  types.py
src/tidycode/plugins/config/: __init__.py  base_provider.py  dict_plugin.py
src/tidycode/plugins/runner/: __init__.py  base_runner.py
src/tidycode/runner/: __init__.py  display.py  executor.py  helpers.py  subprocess.py  types.py
src/tidycode/utils/: __init__.py  base_enum.py  constants.py  helpers.py  hook_definitions.py  hooks_definitions.py  hooks_helpers.py  input.py  printing.py  pyproject_helpers.py  toml_config_diff.py  toml_config_editor.py  toml_helpers.py  tools_metadata.py
src/tidycode/utils/hooks/: hooks_definitions.py  hooks_helpers.py
src/tidycode/utils/toml/: toml_config_editor.py  (+1 more)
tests/: conftest.py  test_helpers.py  test_hooks_helpers.py  test_setup_commitizen.py  test_setup_hooks.py  test_utils.py
tests/changelog/: __init__.py  test_manager_basic_operations.py  test_manager_capture.py  test_manager_display.py  test_manager_display_advanced.py  test_manager_edge_cases.py  test_manager_init.py  test_manager_integration.py  test_manager_integration_advanced.py  test_manager_performance.py  test_manager_utils.py  test_manager_validation.py  test_types.py
tests/cli/: test_commitizen.py  test_configs.py  test_dependabot.py  test_hooks.py
tests/core/: test_setup_commitizen.py  test_setup_dependabot.py  test_setup_hooks.py
tests/core/pre_commit/: __init__.py  test_helpers.py  test_init.py  test_manager_hooks.py  test_manager_init.py  test_manager_integration.py  test_manager_operations.py
tests/core/pyproject/: test_default_tools.py  test_types.py
tests/core/toml/: test_loader_and_merger_behavior.py  test_toml_loader.py  test_toml_manager_init.py  test_toml_manager_integration.py  test_toml_manager_internal.py  test_toml_manager_keys.py  test_toml_manager_sections.py  test_toml_manager_utils.py  test_toml_merger.py
tests/core/yaml/: __init__.py  test_base_adapter.py  test_fake_yaml_adapter.py  test_pyyaml_adapter.py  test_ruamel_adapter.py  test_utils.py  test_yaml_init.py  test_yaml_loader.py  test_yaml_manager.py  test_yaml_manager_init.py  test_yaml_manager_integration.py  test_yaml_manager_internal.py  test_yaml_manager_keys.py
tests/modules/quality/: test_black_runner.py  test_init.py  test_integration.py  test_isort_runner.py  test_mypy_runner.py  test_orchestrator.py  test_ruff_runner.py
tests/plugins/: test_base.py  test_init.py  test_loader.py  test_registry.py  test_types.py
tests/plugins/config/: test_base_provider.py  test_dict_plugin.py
tests/plugins/runner/: __init__.py  test_base_runner.py  test_init.py
tests/runner/: __init__.py  test_display.py  test_executor.py  test_helpers.py  test_init.py  test_plugins.py  test_subprocess.py  test_types.py
tests/utils/: __init__.py  test_helpers.py  test_hooks_helpers.py  test_inject_tool_config_in_file.py  test_pyproject_helpers.py  test_toml_config_diff.py  test_toml_config_editor.py  test_toml_helpers.py
(+25 files in other folders)
