[project]
name = "tidycode"
version = "0.1.0"
description = "Kit minimal pour automatiser le lint, format, type-checking, changelog et hooks dans vos projets Python"
authors = [
    {name = "Ephraïm SEDDOR",email = "seddorephraim7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "typer[all] (>=0.16.0,<0.17.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "tomlkit (>=0.13.3,<0.14.0)",
    "ruamel-yaml (>=0.18.14,<0.19.0)"
]

[tool.poetry]
packages = [{include = "tidycode", from = "src"}]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[tool.poetry.scripts]
tidycode = "tidycode.cli.main:main"
tidy = "tidycode.cli.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

