[project]
name = "tidycode"
version = "0.1.0"
description = "A fun and simple CLI to keep your Python projects clean and secure (format, lint, test, doctor, etc.)"
authors = [
    {name = "Ephraim Seddor",email = "seddorephraim7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "typer[all] (>=0.17.3,<0.18.0)",
    "questionary (>=2.1.1,<3.0.0)",
    "tomlkit (>=0.13.3,<0.14.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
packages = [{include = "tidycode", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
ruff = "^0.12.11"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
bandit = "^1.8.6"


[tool.poetry.scripts]
tidycode = "tidycode.cli.main:app"
tidy = "tidycode.cli.main:app"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[data]
name = "data"
desc = "somehint"
role = "give insight"

[data.tool]
name = "tool"
desc = "ins"
dde = "ff"

